--- a/etc/Dockerfile
+++ b/etc/Dockerfile
@@ -16,8 +16,7 @@ ARG ARCH
 ARG SOURCE
 RUN apt update && apt install -y ca-certificates
 COPY --from=builder /usr/src/app/build/* /usr/local/bin/
-COPY etc/entrypoint.sh .
-RUN chmod +x entrypoint.sh
+COPY --chmod=755 etc/entrypoint.sh .
 
 # Install the api commands
 RUN api install
