Fixes after PR review

--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -1,8 +1,7 @@
-
 name: "Merge to main"
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 jobs:
   analyze:
     name: Analyze
@@ -14,24 +13,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'go' ]    
+        language: ["go"]
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ matrix.language }}
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v3
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
   test:
     name: Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.23', '1.24' ]  
+        go-version: ["1.24", "1.25"]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
